# ytalk

./: .cvsignore  AUTHORS  BUGS  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.HP-UX  TODO  autobuild.sh  autogen.sh  config.h.in  configure  configure.in  ytalkrc
docs/: .cvsignore  Makefile.am  poster  poster.p1  term.doc  ytalk.1.in  ytalk.lsm
intl/: .cvsignore  Makefile.in
libytk/: Makefile.am  display.c  display.h  inputbox.c  inputbox.h  menu.c  menu.h  msgbox.c  msgbox.h  stack.c  stack.h  thing.c  ytk.h
m4/: .cvsignore  Makefile.am  ac-defdir.m4
po/: .cvsignore  Makefile.in.in  Makevars  POTFILES.in  sv.po  update.pl
src/: .cvsignore  Makefile.am  comm.c  cwin.c  cwin.h  exec.c  fd.c  getpty.c  gtalk.c  gtalk.h  header.h  main.c  mem.c  mem.h  menu.c  menu.h  rc.c  scroll.c  socket.c  socket.h  term.c  user.c  vt100.c  xwin.c  xwin.h  ymenu.c  ymenu.h  ytp.h
